<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_redes"
        android:icon="@drawable/ic_ad_units_24"
        android:title="@string/title_redes" />

    <item
        android:id="@+id/navigation_blogs"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_blogs" />

    <item
        android:id="@+id/navigation_foros"
        android:icon="@drawable/ic_chat_bubble_24"
        android:title="@string/title_foros"/>

    <item
        android:id="@id/navigation_tienda"
        android:icon="@drawable/ic_storefront_24"
        android:title="@string/title_tienda"/>

</menu>