<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="mx.tec.pruebabrillamostodas2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_redes"
        android:name="mx.tec.pruebabrillamostodas2.ui.redes.RedesFragment"
        android:label="@string/title_redes"
        tools:layout="@layout/fragment_redes" />

    <fragment
        android:id="@+id/navigation_blogs"
        android:name="mx.tec.pruebabrillamostodas2.ui.blogs.BlogsFragment"
        android:label="@string/title_blogs"
        tools:layout="@layout/fragment_blogs" />

    <fragment
        android:id="@+id/navigation_foros"
        android:name="mx.tec.pruebabrillamostodas2.ui.foros.ForosFragment"
        android:label="@string/title_foros"
        tools:layout="@layout/fragment_foros"/>

    <fragment
        android:id="@+id/navigation_tienda"
        android:name="mx.tec.pruebabrillamostodas2.ui.tienda.TiendaFragment"
        android:label="@string/title_tienda"
        tools:layout="@layout/fragment_tienda"/>


</navigation>